5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1716_2499.log
== TEST (2019-05-11 13:37:54) 
-- CODE:
n=int(input("entradas: "))
f=0
soma=1
from math import *
while(f<n):
	soma=soma+(1/factorial(f))
	f=f+1
print(f)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:41:03) 
-- CODE:
n=int(input("entradas: "))
f=0
soma=1
from math import *
while(f<n):
	soma=soma+(1/factorial(f))
	f=f+1
print(f)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:41:11) 
-- CODE:
n=int(input("entradas: "))
f=0
soma=1
from math import *
while(f<n):
	soma=soma+(1/factorial(f))
	f=f+1
print(f)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:41:31) 
-- CODE:
n=int(input("entradas: "))
f=0
soma=1
from math import *
while(f<n):
	soma=soma+(1/factorial(f))
	f=f+1
print(soma)
-- OUTPUT:
3.7180555555555554
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:41:56) 
-- CODE:
n=int(input("entradas: "))
f=0
soma=1
from math import *
while(f<n):
	soma=soma+(1/factorial(f))
	f=f+1
print(round(soma,8))
-- OUTPUT:
3.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:44:00) 
-- CODE:
n=int(input("entradas: "))
f=0
soma=1
from math import *
while(f<n):
	soma=1+(1/factorial(f))
	f=f+1
print(round(soma,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:44:06) 
-- CODE:
n=int(input("entradas: "))
f=0
soma=1
from math import *
while(f<n):
	soma=1+(1/factorial(f))
	f=f+1
print(round(soma,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:52:03) 
-- CODE:
n=int(input("entradas: "))
f=0
n=0
from math import *
while(f<n):
	fat=(1/factorial(f))
	soma=a+fat
	f=f+1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(soma,8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:52:49) 
-- CODE:
n=int(input("entradas: "))
f=0
n=0
from math import *
while(f<n):
	fat=(1/factorial(f))
	soma=1+fat
	f=f+1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(soma,8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:53:41) 
-- CODE:
n=int(input("entradas: "))
f=0
n=0
from math import *
while(f<n):
	fat=(1/factorial(f))
	soma=1+fat
	f=f+1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(soma,8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:06:54) 
-- CODE:
n=int(input("entradas: "))
f=0
x=0
from math import *
while(f<n):
	fa=1/factorial(f)
	s=1+fa
	m=s+fa
	f=f+1
	
print(round(m,8))
-- OUTPUT:
1.00277778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:24:35) 
-- CODE:
n=int(input("entradas: "))
f=0
fa1=0
from math import *
e=1+1/factorial(f)
while(f<n):
	t=1/factorial(f) + d
	if f>=0:
		fa=1/factorial(f)
		d=e+fa
	f=f+1
print(round(t,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t=1/factorial(f) + d
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:37:40) 
-- CODE:
n=int(input("entradas: "))
f=0
fa1=0
from math import *
while(f<n):
	fa=1+1/factorial(f)
	fa=fa + (1/factorial(f))
print(round(fa,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t=1/factorial(f) + d
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:38:50) 
-- CODE:
n=int(input("entradas: "))
f=0
fa1=0
from math import *
while(f<n):
	fa = 1/factorial(f)
	fa = fa + (1/factorial(f))
print(round(fa,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t=1/factorial(f) + d
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:40:58) 
-- CODE:
n=int(input("entradas: "))
f=0
fa1=0
from math import *
while(f<n):
	fa=1/factorial(0)
	fa= fa +(1/factorial(f))
	f=f+1
print(round(fa,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:41:04) 
-- CODE:
n=int(input("entradas: "))
f=0
fa1=0
from math import *
while(f<n):
	fa=1/factorial(0)
	fa= fa +(1/factorial(f))
	f=f+1
print(round(fa,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:42:37) 
-- CODE:
n=int(input("entradas: "))
f=0
fa1=0
from math import *
while(f<n):
	fa=1/factorial(0)
	fa= fa +(1/factorial(f))
	f=f+1
print(round(fa,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:43:13) 
-- CODE:
n=int(input("entradas: "))
f=0
fa1=0
from math import *
while(f<n):
	fa=1/factorial(0)
	fa= fa +(1/factorial(f))
	f=f+1
print(round(fa,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:46:36) 
-- CODE:
n=int(input("entradas: "))
f=0
from math import *
while(f<n):
	fa= fa +(1/factorial(f))
	f=f+1
print(round(fa,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fa= fa +(1/factorial(f))
NameError: name 'fa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:48:20) 
-- CODE:
n=int(input("entradas: "))
f=0
fa=0
from math import *
while(f<n):
	fa= fa +(1/factorial(f))
	f=f+1
print(round(fa,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 17:49:00) 
-- CODE:
n=int(input("entradas: "))
f=0
fa=0
from math import *
while(f<n):
	fa= fa +(1/factorial(f))
	f=f+1
print(round(fa,8))
-- EXECUTION TIME:
0.145459
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
